--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,3 +22,21 @@ customer.edit.phonenumber = Phonenumber
 customer.edit.emailaddress = Email address
 customer.edit.iban = IBAN
 customer.edit.save = Save
+
+insurances=Insurances
+overview=Overview
+add=Add
+name=Name
+fee=Monthly Fee
+coveredTreatments=Covered Treatments
+customers=Customers
+invoices=Invoices
+declarations=Declarations
+policies=Policies 
+treatments=Treatments
+conditions=Payment Conditions
+users=Users
+settings=Settings
+administration=Administration
+navigation=Navigation
+
