--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -22,3 +22,20 @@ customer.edit.phonenumber = Telefoonnummer
 customer.edit.emailaddress = E-mailadres
 customer.edit.iban = IBAN
 customer.edit.save = Bewaren
+
+insurances=Verzekeringen
+overview=Overzicht
+add=Toevoegen
+name=Naam
+fee=Maandelijkse kosten
+coveredTreatments=Verzekerde behandelingen
+customers=Klanten
+invoices=Facturen
+declarations=Declaraties
+policies=Polissen 
+treatments=Behandelingen
+conditions=Voorwaarden
+users=Gebruikers
+settings=Instellingen
+navigation=Navigatie
+administration=Administratie
